--- a/app/src/main/res/menu/currency_menu.xml
+++ b/app/src/main/res/menu/currency_menu.xml
@@ -3,8 +3,20 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.example.jeffrey.currencyconverter.MainActivity">
 
-    <item android:id="@+id/placeholder"
-          android:title="Placeholder"
+    <item android:id="@+id/changeCurrencyButton"
+          android:title="Change Currency"
+          tools:ignore="HardcodedText">
+
+          <menu>
+              <item
+                  android:id="@+id/currencyPlaceholder"
+                  android:title="Placeholder">
+              </item>
+          </menu>
+    </item>
+
+    <item android:id="@+id/removeCurrencyButton"
+          android:title="Delete"
           tools:ignore="HardcodedText"/>
 
 </menu>
